# ResearchReferenceChecker

./: .env.example  PROMPT.md  README.md  app.py  predatory_db_v5_norwegian_levels.csv  predatory_db_v5_norwegian_matches.csv  predatory_db_v6_manual_check_links.csv  predatory_db_v7_with_norwegian_levels.csv  pyproject.toml  requirements.txt
scripts/: merge_norwegian_levels.py  poller.py
src/award_planner/: __init__.py  alerts.py  cache.py  db.py  models.py  seats_aero_client.py
src/reference_checker/: __init__.py  app.py  citation_extractor.py  cli.py  crossref.py  exporters.py  formatter.py  link_checker.py  matcher.py  metadata.py  models.py  normalization.py  parsers.py  predatory_db.py  reference_parser.py  reference_types.py  report.py  validation.py  web.py  web_metadata.py
src/reference_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_app_flow.py  test_cli.py  test_crossref.py  test_docx_report.py  test_extraction.py  test_link_validation.py  test_updated_docx.py  test_web.py  test_web_metadata.py
tests/data/: README.md
