[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "award-planner"
version = "0.1.0"
description = "Local Seats.aero-powered award search + alerts"
authors = [{name = "ResearchReferenceChecker"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36.0",
    "httpx>=0.27.0",
    "pydantic>=1.10.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
