[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reference-checker"
version = "0.1.0"
description = "Reference validation and formatting toolkit"
authors = [{name = "ResearchReferenceChecker"}]
readme = "PROMPT.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.2.0",
    "pypdf>=4.2.0",
    "openpyxl>=3.1.2",
]

[project.scripts]
reference-checker = "reference_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
